--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="col-md-8 main-content">
+    <!-- Header -->
+    <header class="header-section">
+        <h1 class="name">Laura <span class="surname">Anderson</span>
+        </h1>
+        <p class="title">Web Design & Developer</p>
+       
+        <div class="intro-section">
+            <h2 class="intro-title">Hello, I'm Laura</h2>
+            <p class="intro-text">
+                My Name Is Laura Anderson lorem empus id fringilla molestie ornare diam in olestie ipsum
+                etium rosn ollicitudin est, porttitor amet hitmassa Done cporttitor dolor shit dolor kiren
+                lorem nisl molestie pretium effring, is the shitp lorem ipsum returncl amet is tudinest.moles
+                tum lorem olestie pretium apaza all the rosen, fringilla lorem ipsum .
+            </p>
+        </div>
+    </header>
 
-</body>
-</html>
+
