--- a/app/components/main-content/main-body.html
+++ b/app/components/main-content/main-body.html
@@ -57,7 +57,7 @@
 
     <!-- Education Section -->
     <section class="education-section">
-        <h2 class="main-section-title">EDUCATION</h2>
+        <h2 class="education">EDUCATION</h2>
 
         <div class="timeline-item">
             <div class="timeline-marker"></div>
