--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,13 +1,29 @@
+@use'variables/variables.scss' as *;
+// Sidebar styles
+@use'sidebar/sidebar.scss';
+// Main content styles
+@use'main-content/main-content.scss';
+//footer styles
+@use'footer/footer.scss';
+//fonts
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+// Global styles
 body {
-  background: #ddd2d2;
-
-  img{
-    width: 100%;
-    height: 200px;
-  }
-
-  h1 {
-    text-align: center;
-    color: #0c5080;
-  }
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  line-height: 1.6;
+  display: flex;  
 }
+
+.box-bg {
+ margin-left: 650px;
+ height: max-content;
+ box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+
+.container-lg > .row {
+  display: flex;
+}
+
+
+
