lab4(added fullname write function, added arrow icon, added experience data array and realised his JS function)

--- a/app/components/main-content/main-body.html
+++ b/app/components/main-content/main-body.html
@@ -1,10 +1,96 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<main class="main-content-area">
+    <!-- Experience Section -->
+    <section class="experience-section">
+        <h2 class="main-section-title">EXPERIENCE <i class="bi bi-caret-down-fill"></i></h2>
 
-</body>
-</html>
+       <!--  <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+                <div class="job-header">
+                    <div class="job-title">
+                        <h3>SENIOR</h3>
+                        <h4>WEB DEVELOPER</h4>
+                        <p class="job-date">Jan 2013 - Dec 2015</p>
+                    </div>
+                    <div class="company-info">
+                        <h4>Company Name | Location</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam .</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+                <div class="job-header">
+                    <div class="job-title">
+                        <h3>MASTER</h3>
+                        <h4>WEB DEVELOPER</h4>
+                        <p class="job-date">Mar 2010 - Feb 2012</p>
+                    </div>
+                    <div class="company-info">
+                        <h4>Company Name | Location</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam .</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+                <div class="job-header">
+                    <div class="job-title">
+                        <h3>JQUERY</h3>
+                        <h4>EXPERTISE</h4>
+                        <p class="job-date">Apr 2008 - May 2010</p>
+                    </div>
+                    <div class="company-info">
+                        <h4>Company Name | Location</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam .</p>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </section>
+
+    <!-- Education Section -->
+    <section class="education-section">
+        <h2 class="education">EDUCATION <i class="bi bi-caret-down-fill"></i></h2>
+
+        <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+                <div class="job-header">
+                    <div class="job-title">
+                        <h3>MASTER</h3>
+                        <h4>DESIGN WEB</h4>
+                        <p class="job-date">Jan 2007 - Dic 2009</p>
+                    </div>
+                    <div class="company-info">
+                        <h4>University Of Lorem | Location</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p>
+                    </div>  
+                </div>
+            </div>
+        </div>
+
+        <div class="timeline-item">
+            <div class="timeline-marker"></div>
+            <div class="timeline-content">
+                <div class="job-header">
+                    <div class="job-title">
+                        <h3>BACHELORS</h3>
+                        <h4>OF ARTS</h4>
+                        <p class="job-date">Mar 2004 - Feb 2007</p>
+                    </div>
+                    <div class="company-info">
+                        <h4>University Of Lorem | Location</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam .</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
